Fixed bug where side bar would not open on mobile

--- a/client/src/Pages/Home/Home.scss
+++ b/client/src/Pages/Home/Home.scss
@@ -2,90 +2,6 @@ body {
     background-color: $mid-navy;
 }
 
-aside {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 18vw;
-
-    button {
-        color: $yellow;
-        font-size: 25px;
-        background-color: $dark-navy;
-    }
-
-    .menu-button {
-        border-radius: 5px;
-        font-size: 45px;
-        height: 50px;
-        width: 50px;
-        padding: 0;
-        position: relative;
-        left: -2px;
-    }
-
-    .menu-button:focus-within {
-        background-color: $dark-navy;
-        position: relative;
-        left: 17.8vw;
-    }
-
-    .menu-button:focus-within .Sidebar {
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-        background-color: $dark-navy;
-
-    }
-
-    .Sidebar {
-        display: none;
-        height: 100vh;
-        width: 18vw;
-        position: relative;
-        left: -17.8vw;
-        top: -56px;
-        font-size: 25px;
-        justify-content: left;
-        text-align: left;
-
-        hr {
-            border: 1px solid $mid-navy;
-            width: 80%;
-            margin: 10px auto 0;
-        }
-
-        ul {
-            padding: 0 10%;
-            list-style: none;
-
-            li {
-                display: flex;
-                align-items: center;
-                margin: 15px 0;
-
-                a {
-                    margin-left: 10px;
-                    font-size: 20px;
-                    text-decoration: underline;
-                    text-underline-offset: 5px;
-                    color: $yellow;
-                }
-            }
-        }
-
-        .user-info {
-
-            img {
-                width: 120px;
-                height: 120px;
-                border-radius: 100%;
-            }
-        }
-    }
-}
-
 .Posts {
     width: 50%;
     margin: 0 auto;
